// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bbt-export-Better BibLaTeX.006-sentencecase=on+guess+caseprotection=as-needed.biblatex 1`] = `
Object {
  "comments": Array [],
  "entries": Array [
    Object {
      "creators": Object {},
      "fields": Object {
        "title": Array [
          "Non-breaking space: ; accented characters: Ñ and ñ; tilde in URL: <span class=\\"nocase\\">http://example.com/~user</span>",
        ],
      },
      "key": "test-ticket1661",
      "type": "article",
    },
  ],
  "errors": Array [],
  "groups": Object {
    "fileDirectory": null,
    "groups": Object {},
    "root": Array [],
    "version": null,
  },
  "preamble": Array [],
  "strings": Object {},
}
`;

exports[`export Better BibLaTeX.006.biblatex 1`] = `
Object {
  "comments": Array [],
  "entries": Array [
    Object {
      "creators": Object {},
      "fields": Object {
        "title": Array [
          "Non-breaking space: ; accented characters: Ñ and ñ; tilde in URL: <span class=\\"nocase\\">http://example.com/~user</span>",
        ],
      },
      "key": "test-ticket1661",
      "type": "article",
    },
  ],
  "errors": Array [],
  "preamble": Array [],
  "strings": Object {},
}
`;
